tests/js/invalid/declarations/use-before-defined.buri
-- cannot use an identifier before it's defined

b = a
a = 1